# VoiceCloningApp

./: .gitignore  README.md  add_sample_stories.py  admin.py  app-2.py  app-old.py  app.py  auth.py  check_db.py  check_gpu.py  check_vocab_pretrained.py  config.py  convert_sr.py  extend_embedding_pretrained.py  fine_tuning.sh  fix_admin.py  fix_model.py  history.py  infer.sh  migrate_roles.py  migrate_stories.py  prepare_metadata.py  pyproject.toml  render.yaml  requirements.txt  schema.sql  stories.py  update_admin.py  upload.py
ckpts/runs/emotion_embeddings/: events.out.tfevents.1761181776.VNVT.31412.0  events.out.tfevents.1761181888.VNVT.28060.0
data/: sample_stories.json
data/Emilia_ZH_EN_pinyin/: vocab.txt
src/f5_tts.egg-info/: PKG-INFO  SOURCES.txt
src/f5_tts/infer/: infer_cli.py  utils_infer.py
src/f5_tts/infer/examples/basic/: basic.toml
static/css/: style.css
static/js/: script.js  theme.js
static/voices/: text-ref.txt
templates/: favorites.html  history_page.html  index.html  index2.html  login.html  profile.html  stories.html  story_detail.html
templates/admin/: categories.html  dashboard.html  roles.html  stories.html  story_form.html  users.html
