[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "story-telling-app"
version = "1.0.0"
description = "Story Telling App - Web Application"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
dependencies = [
    "Flask>=3.0.0",
    "Werkzeug>=3.0.0",
    "gunicorn>=21.0.0",
    "bcrypt>=4.1.0",
    "PyJWT>=2.8.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
]
